 * Frontflow / violet Cartesian
 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2013 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

       
--------------------------
2013-07-06

    r994 make package 1.2.0


----------------------------
2013-07-05

    r993 autotool trying

    r992 Compile OK by Makefile_hand

    r991 modify Makefile_hand to suppress depend target for f90
         - Makefile_handでf90ターゲットのdependを抑制

    r990 modify for CIOlib 1.3.x
         - CIOlib 1.3.x以降への対応
           FB/dbwrite.f90の追加
           ffv.C  CIOlib debug
           ffv_Initializa.C dfiクラスの代替
           ffv_REstart.C 解像度が2倍のチェック

    r989 modify srcs by ffvc-mini app's comment
         - ffvc-mini app.の整備過程で発見した修正
           NS_FS_E_Binary.C
             res_initがsqrtされていない
             未初期化のconvergence_prevを参照
           ffv_velocity_binary.f90
             pvec_musclで、FIRSTPRIVATEに指定しているdhがdoループ内で未使用
             (Intelコンパイラで-O0で実行するとセグメント違反で落ちる)
           ffv_LS.C
             tm_poi_src_nrmのflop_countに，直前の最後のPoisson反復でのtm_poi_SOR2SMA
             のfloop_countが混入

----------------------------
Date:    Jul 4 18:17:38 2013 

    r988 Cutlib-3.1.1
         - Cutlib-3.1.1対応のため，GridAccessorクラスを用いたインターフェイスに変更
           setup_Polygon2CutInfo()でpoly_org, poly_dxをdoubleへ変更

----------------------------
Date:    Jul 3 23:06:08 2013 

    r987 update copyright for all source

    r986 change makefiles

    r985 packaging adjustment
         - パッケージ形式をautotoolsを利用したインストールに合わせて変更開始

----------------------------
Date:    Jun 22 15:35:54 2013 

    r984 move doc.tex to doc.git

    r983 add README.md

----------------------------
Date:    Jun 15 16:39:52 2013 

    r982 correct release note 

    r981 correct revision number 
