@@ -47,10 +47,10 @@ am__make_dryrun = \
     esac; \
     test $$am__dry = yes; \
   }
-pkgdatadir = $(datadir)/ffvc
-pkgincludedir = $(includedir)/ffvc
-pkglibdir = $(libdir)/ffvc
-pkglibexecdir = $(libexecdir)/ffvc
+pkgdatadir = $(datadir)/FFVC
+pkgincludedir = $(includedir)/FFVC
+pkglibdir = $(libdir)/FFVC
+pkglibexecdir = $(libexecdir)/FFVC
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
 install_sh_DATA = $(install_sh) -c -m 644
 install_sh_PROGRAM = $(install_sh) -c
@@ -113,11 +113,11 @@ HEADERS = $(doc_include_HEADERS)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/missing --run aclocal-1.12
+ACLOCAL = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0/missing --run aclocal-1.12
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/missing --run autoconf
-AUTOHEADER = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/missing --run autoheader
-AUTOMAKE = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/missing --run automake-1.12
+AUTOCONF = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0/missing --run autoconf
+AUTOHEADER = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0/missing --run autoheader
+AUTOMAKE = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0/missing --run automake-1.12
 AWK = awk
 CC = mpicc
 CCDEPMODE = depmode=gcc3
@@ -125,9 +125,9 @@ CFLAGS = -O3
 CIO_CFLAGS = -I/usr/local/CIOlib/include -I/usr/local/TextParser/include
 CIO_DIR = /usr/local/CIOlib
 CIO_LDFLAGS = -L/usr/local/CIOlib/lib -lCIO -L/usr/local/TextParser/lib -lMPITP
-CPM_CFLAGS = -I/usr/local/CPMlib/include -I/opt/openmpi/include -I/usr/local/TextParser/include -I/usr/local/PMlib/include
+CPM_CFLAGS = -I/usr/local/CPMlib/include -I/usr/local/TextParser/include -I/usr/local/PMlib/include
 CPM_DIR = /usr/local/CPMlib
-CPM_LDFLAGS = -L/usr/local/CPMlib/lib -lCPM -lstdc++ -L/opt/openmpi/lib -lmpi -L/usr/local/TextParser/lib -lMPITP -L/usr/local/PMlib/lib -lPM
+CPM_LDFLAGS = -L/usr/local/CPMlib/lib -lCPM -lstdc++ -lifport -lifcore -L/usr/local/TextParser/lib -lMPITP -L/usr/local/PMlib/lib -lPM
 CPP = mpicc -E
 CPPFLAGS = 
 CUT_CFLAGS = -I/usr/local/Cutlib/include -DCUTINFO_NORMAL_DOUBLE -I/usr/local/Polylib/include -I/usr/local/TextParser/include -I/usr/local/TextParser/include
@@ -153,7 +153,7 @@ FFVC_FC = mpif90
 FFVC_FC_LD = 
 FFVC_LDFLAGS = 
 FFVC_LIBS =  -lifport -lifcore
-FFVC_REVISION = 20130706_1500
+FFVC_REVISION = 20130707_1600
 FREALOPT = 
 GREP = /usr/bin/grep
 INSTALL = /usr/local/bin/ginstall -c
@@ -165,7 +165,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/missing --run makeinfo
+MAKEINFO = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0/missing --run makeinfo
 MAKE_SUB_DIRS = src/IP src/FB src/F_CORE src/PLOT3D src/FFV src/Util_Combsph src/Util_Layout doc
 MKDIR_P = /usr/local/bin/gmkdir -p
 MPICH_CFLAGS = 
@@ -174,11 +174,11 @@ MPICH_FCLIBS =
 MPICH_LDFLAGS = 
 MPICH_LIBS = 
 OBJEXT = o
-PACKAGE = ffvc
+PACKAGE = FFVC
 PACKAGE_BUGREPORT = keno@riken.jp
-PACKAGE_NAME = ffvc
-PACKAGE_STRING = ffvc 1.2.0
-PACKAGE_TARNAME = ffvc
+PACKAGE_NAME = FFVC
+PACKAGE_STRING = FFVC 1.2.0
+PACKAGE_TARNAME = FFVC
 PACKAGE_URL = 
 PACKAGE_VERSION = 1.2.0
 PATH_SEPARATOR = :
@@ -198,10 +198,10 @@ TP_CFLAGS = -I/usr/local/TextParser/include
 TP_DIR = /usr/local/TextParser
 TP_LDFLAGS = -L/usr/local/TextParser/lib -lMPITP
 VERSION = 1.2.0
-abs_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/doc
-abs_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/doc
-abs_top_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC
-abs_top_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC
+abs_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0/doc
+abs_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0/doc
+abs_top_builddir = /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0
+abs_top_srcdir = /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0
 ac_ct_CC = mpicc
 ac_ct_CXX = 
 ac_ct_F77 = ifort
@@ -223,7 +223,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/FFVC/install-sh
+install_sh = ${SHELL} /Volumes/MRaid/Daily/Development/SphDev/Module/ffvc-1.2.0/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
