@@ -59,7 +59,7 @@ while test $# -gt 0; do
     --version)
 cat <<EOF
 
-# FFV-C : Frontflow / violet Cartesian  Ver. 1.2.0  (20130706_1500)
+# FFV-C : Frontflow / violet Cartesian  Ver. 1.2.0  (20130707_1600)
 #
 # Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 # All rights reserved.
