@@ -18,12 +18,15 @@
 REVISION HISTORY
 ================
 
-       
+--------------------------
+2013-07-07
+
+    r995 change package name from ffvc to FFVC
+
 --------------------------
 2013-07-06
 
     r994 make package 1.2.0
-
 
 ----------------------------
 2013-07-05
